tests/negative/typecheck/try.orng
// try.orng:6:10: error: expected error type for try, got `Int`
//     try 0
//         ^
// 
fn main() -> Int {
    try 0
    0
}